samples/express/views/errors/circular-include-b.njk
{% include "circular-include-a.njk" %}
